--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container__caixa">
         <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
     <img src="img/Combo.png" alt = "Combo+ Alura+ e o Alura Lingua" class ="container__imagem">
-    <a href="www.alura.com.br" class="container__botao">Assine por 12 vezes de R$ 120,00</a>
-    <a href="www.alura.com.br" class="container__botao botao_secundario "> Assinar somente o Alura+</a>
+    <a href="https://www.alura.com.br/planos-cursos-online?srsltid=AfmBOor0341I-N-77XylmTJwbJtCWbKYZOhmrMSSCmXpU01NN7gg6Lyl" class="container__botao">Assine por 12 vezes de R$ 120,00</a>
+    <a href="https://www.alura.com.br/planos-cursos-online?srsltid=AfmBOor0341I-N-77XylmTJwbJtCWbKYZOhmrMSSCmXpU01NN7gg6Lyl" class="container__botao botao_secundario "> Assinar somente o Alura+</a>
     <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos </p> 
     </div>
 </section>
@@ -31,7 +31,7 @@
 <section class="container secundario">
     <div class="container__descricao">
         <p class="descrixao_texto"> Só o Combo+ oferece Alura+ e Alura Linguas juntos para você ter acesso a cursos de diversos áreas de tecnologia e aprendser inglês ou espanhol, onde e como quiser.</p>
-   <a href="www.alura.com.br" class=" container__botao secundario__botao"> Assina o Combo+</a>
+   <a href="https://www.alura.com.br/planos-cursos-online?srsltid=AfmBOor0341I-N-77XylmTJwbJtCWbKYZOhmrMSSCmXpU01NN7gg6Lyl" class=" container__botao secundario__botao"> Assina o Combo+</a>
     </div>
 <img src="img/Telas.png" alt="Tela da Alura+ e Alura Linguas">
 </section>
