--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p class="descrixao_texto"> Só o Combo+ oferece Alura+ e Alura Linguas juntos para você ter acesso a cursos de diversos áreas de tecnologia e aprendser inglês ou espanhol, onde e como quiser.</p>
    <a href="https://www.alura.com.br/planos-cursos-online?srsltid=AfmBOor0341I-N-77XylmTJwbJtCWbKYZOhmrMSSCmXpU01NN7gg6Lyl" class=" container__botao secundario__botao"> Assina o Combo+</a>
     </div>
-<img src="img/Telas.png" alt="Tela da Alura+ e Alura Linguas">
+<img src="img/Telas.png" alt="Tela da Alura+ e Alura Linguas" class="imagem__telas">
 </section>
 
 <section class="container secundario">
