correção de erros de ortografia.

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <img src="img/Plataformas.png" alt="Um monitor e um celular com o alura Plus" class="secundario__imagem">
     <div class="container__descricao">
         <h2 class="descricao__titulo">Assista do seu jeito</h2>
-        <p class="descricao__texto">Aproveite a tele grande da TV ou assista no tablet, laptop, celular e outros aparelhos.Nossas seleçôes de cursos não param de crecer.</p>
+        <p class="descricao__texto"> Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
     </div>
 </section>
 
 <section class="container secundario">
     <div class="container__descricao">
-        <p class="descrixao_texto"> Só o Combo+ oferece Alura+ e Alura Linguas juntos para você ter acesso a cursos de diversos áreas de tecnologia e aprendser inglês ou espanhol, onde e como quiser.</p>
+        <p class="descrixao_texto"> Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
    <a href="https://www.alura.com.br/planos-cursos-online?srsltid=AfmBOor0341I-N-77XylmTJwbJtCWbKYZOhmrMSSCmXpU01NN7gg6Lyl" class=" container__botao secundario__botao"> Assina o Combo+</a>
     </div>
 <img src="img/Telas.png" alt="Tela da Alura+ e Alura Linguas" class="imagem__telas">
@@ -40,7 +40,7 @@
     <img src="img/Notebook.png" alt="Um Notebook com o alura Plus" class="secundario__imagem">
     <div class="container__descricao">
         <h2 class="descricao__titulo">Baixe seus cursos</h2>
-        <p class="descricao__texto"> Baixe e assita quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet</p>
+        <p class="descricao__texto"> Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
     </div>
 </section>
 <section class="dispositivos">
