--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 </section>
 <section class="dispositivos">
-    <h2 class="dispositivos__titulo">Disponìvel nos seus dispositivos favoritos</h2>
+    <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
     <ul class="dispositivos__lista">
         <li>
             <img src="img/tv.png" alt=" icone Tv">
