--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <section class="container secundario">
     <div class="container__descricao">
         <p class="descrixao_texto"> Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-   <a href="https://www.alura.com.br/planos-cursos-online?srsltid=AfmBOor0341I-N-77XylmTJwbJtCWbKYZOhmrMSSCmXpU01NN7gg6Lyl" class=" container__botao secundario__botao"> Assina o Combo+</a>
+   <a href="https://www.alura.com.br/planos-cursos-online?srsltid=AfmBOor0341I-N-77XylmTJwbJtCWbKYZOhmrMSSCmXpU01NN7gg6Lyl" class=" container__botao secundario__botao"> Assine o Combo+</a>
     </div>
 <img src="img/Telas.png" alt="Tela da Alura+ e Alura Linguas" class="imagem__telas">
 </section>
